[FIX] collapsed menu on medias

--- a/project-addons/theme_point_sport/static/css/media.less
+++ b/project-addons/theme_point_sport/static/css/media.less
@@ -48,14 +48,14 @@
         float: none;
     }
     .navbar-collapse.collapse {
-        display: block !important;
+        display: none !important;
     }
     .navbar-collapse.collapse.in {
-        display: none !important;
+        display: block !important;
     }
 }
 
-@media (max-width: 768px){
+@media (max-width: 992px){
     header {
         /*background-color: rgba(0,0,0,0.9);
         &.fixed {
